--- a/.travis.yml
+++ b/.travis.yml
@@ -4,8 +4,7 @@ php:
   - 7.0
   - 7.1
 
-before_script:
-  - composer self-update
+before_script
   - composer install --prefer-source --no-interaction --dev
 
 script: phpunit
