--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ php:
   - 7.0
   - 7.1
 
-before_script
+before_script:
   - composer install --prefer-source --no-interaction --dev
 
 script: phpunit
