--- a/composer.json
+++ b/composer.json
@@ -16,10 +16,10 @@
     }
   },
   "require": {
-    "php": "^7.0",
+    "php": "^7.1 || ^8.0",
     "guzzlehttp/guzzle": "~6.1"
   },
   "require-dev": {
-    "phpunit/phpunit": "^6.2"
+    "phpunit/phpunit": "^9.4"
   }
 }
